src/objects/CD_BPA_Launch__c.object
<CustomObject>
    <fields>
        <fullName>Award__c</fullName>
        <label>Award</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPA_RFQ_Creation_date__c</fullName>
        <label>BPA_RFQ Creation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BPA_RFQ_created_by__c</fullName>
        <label>BPA_RFQ created by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPA_RFQ_number__c</fullName>
        <label>BPA_RFQ number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchCount__c</fullName>
        <description>This field stores the no of records in a single batch.</description>
        <label>BatchCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <label>Batch Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Submission_date__c</fullName>
        <label>Batch Submission date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_submitted_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch submitted by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CD_BPA_Launch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_Category_Managers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD Category Managers</label>
        <referenceTo>CD_Category_Managers__c</referenceTo>
        <relationshipLabel>CD BPA Launch</relationshipLabel>
        <relationshipName>CD_BPA_Launch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Type__c</fullName>
        <label>Cost Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download_Status__c</fullName>
        <label>Download Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_end_date__c</fullName>
        <label>Effective end date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_start_date__c</fullName>
        <label>Effective start date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_BPA_RFQ_No__c</fullName>
        <label>Existing BPA_RFQ_No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item_number</label>
        <referenceTo>CD_Items__c</referenceTo>
        <relationshipLabel>CD BPA Launch</relationshipLabel>
        <relationshipName>CD_BPA_Launch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_cost_type__c</fullName>
        <label>Source cost type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CD BPA Launch</relationshipLabel>
        <relationshipName>CD_BPA_Launch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>CD BPA Launch</label>
    <nameField>
        <label>CD BPA Launch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD BPA Launch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>